2024-02-18T00:32:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7945300324 # 126
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-18
* notice: last 14d: unq all: 1 11
* notice: prev accum: outdated-unq outdated-all / unq all: 331 691 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 332 693 / 338 704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-03] / []

2024-02-17T00:29:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7937879723 # 123
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-17
* notice: last 14d: unq all: 1 13
* notice: prev accum: outdated-unq outdated-all / unq all: 330 689 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 331 691 / 338 704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-02] / []

2024-02-16T00:29:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7924165381 # 120
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-16
* notice: last 14d: unq all: 1 15
* notice: prev accum: outdated-unq outdated-all / unq all: 329 687 / 338 704
* notice: next accum: outdated-unq outdated-all / unq all: 330 689 / 338 704
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-02-01] / []

2024-02-15T00:29:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7909259730 # 117