@@ -1,12 +1,7 @@
 {
-  "count": 11,
+  "count": 9,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-02-04T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-05T00:00:00Z",
       "count": 2,
